--- a/assets/main.css
+++ b/assets/main.css
@@ -16,8 +16,50 @@ body {
     overflow-x: hidden;
 }
 
-.profile {
+.parallax-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    perspective: 1px;
     width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+.parallax-group {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    transform-style: preserve-3d;
+}
+
+.parallax-layer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.background {
+    transform: translateZ(-1px) scale(2);
+    height: 100vh;
+    width: 100vw;
+    background-color: #003262;
+}
+  
+.foreground {
+    top: 100vh;
+    height: auto;
+    width: 100%; 
+}
+
+.profile {
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-flow: row wrap;
@@ -109,7 +151,7 @@ body {
     grid-template-columns: 15% 85%;
     grid-template-areas: 'menu content';
     align-content: center;
-    background-color: rgba(185, 164, 40, 0.568);
+    background-color: #d7cb84;
 }
 
 .portfolio-menu {
@@ -136,7 +178,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
-    background-color: rgba(185, 164, 40, 0.568);
+    background-color: #d7cb84;
 }
 
 h2.menu, #portfolio-title {
