--- a/assets/main.css
+++ b/assets/main.css
@@ -14,11 +14,10 @@ body {
     color: var(--text-color);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow-x: hidden;
-    background-color: #003262;
 }
 
 .profile {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-flow: row wrap;
