--- a/assets/main.css
+++ b/assets/main.css
@@ -4,6 +4,8 @@
     --alt-background-color: #d7cb84; /* dark mode: black */
     --alt-text-color: #003262; /* dark mode: white */
     --box-shadow: 0 5px 20px black; /* dark mode: 0 0 5px white */
+    --fly-in-duration: 0.6s;
+    --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
 }
 
 html, body {
@@ -38,7 +40,12 @@ body {
     margin: 0;
 }
 
-@keyframes picture-fly-in {
+@keyframes picture-fly-in-Y {
+    from { transform: translateY(90vh); }
+    to { transform: translateY(0); }
+}
+
+@keyframes picture-fly-in-X {
     from { transform: translateX(-40vw); }
     to { transform: translateX(0); }
 }
@@ -51,7 +58,7 @@ body {
     border: 1.5px solid var(--main-text-color);
     margin-left: 20%;
     box-sizing: border-box;
-    animation: picture-fly-in 0.4s ease-out;
+    animation: picture-fly-in-Y var(--fly-in-duration) var(--fly-in-timing-function);
 }
 
 @keyframes profile-fly-in {
@@ -67,7 +74,7 @@ body {
     box-sizing: border-box;
     margin: auto;
     font-size: 20px;
-    animation: profile-fly-in 0.4s ease-out;
+    animation: profile-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
 }
 
 .icons a .icon {
@@ -113,7 +120,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: arrow-fly-in 0.4s ease-out;
+    animation: arrow-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
 }
 
 @keyframes bounce {
