--- a/assets/main.css
+++ b/assets/main.css
@@ -1,9 +1,10 @@
 :root {
     --main-background-color: #003262; /* dark mode: black */
     --main-text-color: white; /* dark mode: white */
+    --main-background-gradient: linear-gradient(30deg, #003262, #004893); /* dark mode: black */
     --alt-background-color: #d7cb84; /* dark mode: black */
     --alt-text-color: #003262; /* dark mode: white */
-    --box-shadow: 0 5px 20px black; /* dark mode: 0 0 5px white */
+    --box-shadow: 0 5px 15px black; /* dark mode: 0 0 5px white */
     --fly-in-duration: 0.6s;
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
 }
@@ -28,7 +29,7 @@ body {
     align-items: center;
     align-content: stretch;
     overflow: hidden;
-    background-color: var(--main-background-color);
+    background: var(--main-background-gradient);
     color: var(--main-text-color);
 }
 
@@ -158,7 +159,7 @@ body {
     grid-template-rows: auto auto;
     grid-template-areas: 'menu title' '. content';
     align-content: center;
-    background-color: var(--alt-background-color);
+    background: var(--alt-background-color);
 }
 
 .portfolio-menu {
@@ -187,7 +188,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
-    background-color: var(--alt-background-color);
+    background: var(--alt-background-color);
 }
 
 h2.menu, #portfolio-title {
@@ -221,16 +222,16 @@ h2.menu {
     font-variant: small-caps;
     width: 100%;
     text-align: left;
-    background-color: transparent;
+    background: transparent;
 }
 
 h2.menu:hover {
     cursor: pointer;
-    background-color: rgba(0, 51, 98, 0.1); /* alt text color with alpha of 0.1 */
+    background: rgba(0, 51, 98, 0.1); /* alt text color with alpha of 0.1 */
 }
 
 h2.menu.selected {
-    background-color: rgba(0, 51, 98, 0.2); /* alt text color with alpha of 0.2 */
+    background: rgba(0, 51, 98, 0.2); /* alt text color with alpha of 0.2 */
 }
 
 .Projects-container {
@@ -250,7 +251,7 @@ h2.menu.selected {
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    background-color: var(--main-background-color);
+    background: var(--main-background-color);
     color: var(--main-text-color);
     margin: 1%;
     padding: 4%;
@@ -277,7 +278,6 @@ h2.menu.selected {
 .project-title {
     width: 100%;
     height: auto;
-    color: var(--main-text-color);
     padding: 1%;
     box-sizing: border-box;
     font-size: 30px;
@@ -289,7 +289,6 @@ h2.menu.selected {
 
 .project-description {
     font-size: 17px;
-    color: var(--main-text-color);
     padding: 1%;
     box-sizing: border-box;
     text-align: left;
@@ -312,7 +311,7 @@ h2.menu.selected {
 }
 
 footer {
-    background-color: var(--main-background-color);
+    background: var(--main-background-gradient);
     color: var(--main-text-color);
     text-align: center;
     padding: 1%;
