--- a/assets/main.css
+++ b/assets/main.css
@@ -259,6 +259,10 @@ h2.menu.selected {
     box-shadow: var(--box-shadow);
 }
 
+.project-card a {
+    color: inherit;
+}
+
 .project-image-container {
     width: auto;
     height: 20vh;
