--- a/assets/main.css
+++ b/assets/main.css
@@ -120,35 +120,23 @@ body {
 }
 
 @keyframes arrow-bounce {
-    0%, 50%, 62%, 88%, 100% { transform: translateY(0); }
-    75% { transform: translateY(10px); }
+    0%, 50%, 62%, 88%, 100% { transform: translateY(0) rotate(45deg); }
+    75% { transform: translateY(10px) rotate(45deg); }
 }
 
-#arrow-image {
-    width: 2.5vw;
-    height: auto;
-    transition: all 0.4s;
+.arrow {
+    width: 2vw;
+    height: 2vw;
+    border-width: 0 2px 2px 0;
+    border-style: solid;
+    border-color: var(--main-text-color);
+    transform: rotate(45deg);
     animation: arrow-bounce 4s 1s infinite;
 }
 
-#arrow-image:hover {
-    opacity: 0.7;
+.arrow:hover {
+    border-width: 0 3.5px 3.5px 0;
     cursor: pointer;
-}
-
-.down-arrow a {
-    color: var(--main-text-color);
-    text-decoration: none;
-}
-
-.down-arrow a:link {
-    color: var(--main-text-color);
-    text-decoration: none;
-}
-
-.down-arrow a:visited {
-    color: var(--main-text-color);
-    text-decoration: none;
 }
 
 .portfolio-container {
