--- a/assets/main.css
+++ b/assets/main.css
@@ -179,7 +179,7 @@ body {
     background: var(--alt-background-color);
 }
 
-h2.menu, #portfolio-title {
+button.menu a, button.menu a h2, #portfolio-title {
     color: var(--alt-text-color);
     display: inline;
     text-decoration: none;
@@ -201,7 +201,33 @@ h2.menu, #portfolio-title {
     width: 100%;
 }
 
-h2.menu {
+button.menu {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+button.menu:hover {
+    cursor: pointer;
+    background: rgba(0, 51, 98, 0.1); /* alt text color with alpha of 0.1 */
+}
+
+button.menu:focus {
+    outline: none;
+}
+
+button.menu a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+button.menu a h2 {
+    display: inline-block;
     text-align: left;
     font-size: 24px;
     padding: 3% 10%;
@@ -209,16 +235,10 @@ h2.menu {
     box-sizing: border-box;
     font-variant: small-caps;
     width: 100%;
-    text-align: left;
-    background: transparent;
+    height: 100%;
 }
 
-h2.menu:hover {
-    cursor: pointer;
-    background: rgba(0, 51, 98, 0.1); /* alt text color with alpha of 0.1 */
-}
-
-h2.menu.selected {
+button.menu.selected {
     background: rgba(0, 51, 98, 0.2); /* alt text color with alpha of 0.2 */
 }
 
@@ -230,8 +250,7 @@ h2.menu.selected {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
     grid-auto-flow: row;
-    padding: 2% 5%;
-    padding-top: 0;
+    padding: 0 5% 2% 5%;
     box-sizing: border-box;
 }
 
