--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -9,6 +9,10 @@
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
 }
 
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     padding: 0;
     margin: 0;
