--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -1,7 +1,7 @@
 @mixin custom-scrollbar($size, $foreground-color, $background-color: mix($foreground-color, white,  50%)) {
     // For Webkit browsers
     &::-webkit-scrollbar {
-        width:  $size;
+        width: $size;
         height: 100%;
     }
   
@@ -18,6 +18,10 @@
         scrollbar-face-color: $foreground-color;
         scrollbar-track-color: $background-color;
     }
+}
+
+@mixin font-size($size) {
+    font-size: calc(#{$size} * var(--width-percent));
 }
 
 @keyframes picture-fly-in {
@@ -49,10 +53,17 @@
     --box-shadow: 0 5px 15px black; /* dark mode: 0 0 5px white */
     --fly-in-duration: 0.6s;
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
+    --width-percent: 1;
+    --height-percent: 1;
 }
 
 * {
     box-sizing: border-box;
+    font-family: Roboto, Helvetica, Verdana, Tahoma, sans-serif;
+}
+
+html {
+    font-size: 100%;
 }
 
 html, body {
@@ -62,9 +73,32 @@ html, body {
 }
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow-x: hidden;
     @include custom-scrollbar(0.8%, #9e9ebe, mix(#9e9e9e, white, 50%));
+}
+
+.title-small {
+    @include font-size(1.8rem);
+}
+
+.title-medium {
+    @include font-size(3rem);
+}
+
+.title-large {
+    @include font-size(4rem);
+}
+
+.text-small {
+    @include font-size(0.8rem);
+}
+
+.text-medium {
+    @include font-size(1rem);
+}
+
+.text-large {
+    @include font-size(1.2rem);
 }
 
 .profile {
@@ -211,7 +245,6 @@ button.menu a, button.menu a h2, #portfolio-title {
 }
 
 #portfolio-title {
-    font-size: 44px;
     margin: 6vh 3vw;
     text-align: left;
     justify-self: flex-start;
@@ -248,7 +281,6 @@ button.menu {
         h2 {
             display: inline-block;
             text-align: left;
-            font-size: 24px;
             padding: 3% 10%;
             margin: 0;
             box-sizing: border-box;
