Add experience section

--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -86,6 +86,10 @@ body {
     @include custom-scrollbar(0.8%, #9e9ebe, mix(#9e9e9e, white, 50%));
 }
 
+.title-xs {
+    @include font-size(1.3rem);
+}
+
 .title-small {
     @include font-size(1.8rem);
 }
@@ -108,6 +112,10 @@ body {
 
 .text-large {
     @include font-size(1.7rem);
+}
+
+.small-caps {
+    font-variant: small-caps;
 }
 
 .profile {
@@ -239,7 +247,7 @@ body {
     background: var(--alt-background-color);
 }
 
-button.menu a, button.menu a h2, #portfolio-title {
+button.menu a, button.menu a h2, .portfolio-title {
     color: var(--alt-text-color);
     display: inline;
     text-decoration: none;
@@ -253,7 +261,7 @@ button.menu a, button.menu a h2, #portfolio-title {
     align-items: center;
 }
 
-#portfolio-title {
+.portfolio-title {
     margin: 6vh 3vw;
     text-align: left;
     justify-self: flex-start;
@@ -293,7 +301,6 @@ button.menu {
             padding: 3% 10%;
             margin: 0;
             box-sizing: border-box;
-            font-variant: small-caps;
             width: 100%;
             height: 100%;
         }
@@ -322,21 +329,25 @@ button.menu {
     align-items: stretch;
 }
 
+.flex-horizontal {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .center {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.project-card {
+.card {
     width: 100%;
-    height: 100%;
     border-radius: 20px;
     background: var(--main-background-color);
     color: var(--main-text-color);
     margin: 1%;
-    padding: 4%;
-    box-sizing: border-box;
     box-shadow: var(--box-shadow);
 
     a {
@@ -344,36 +355,62 @@ button.menu {
     }
 }
 
-.project-image-container {
+.project.card {
+    height: 100%;
+    padding: 4%;
+}
+
+.experience.card {
+    height: 100%;
+    padding: 1% 2%;
+}
+
+.experience.image-container {
+    width: auto;
+    height: 12vh;
+    margin: 1% 0;
+    flex: 15%;
+}
+
+.project.image-container {
     width: auto;
     height: 20vh;
     margin: 1% 0;
 }
 
-.project-image {
+.image {
     max-height: 99%;
     max-width: 99%;
     border-radius: 5px;
     border: 2px solid white;
 }
 
-.project-title {
+.title {
     width: 100%;
     height: auto;
     padding: 1%;
-    box-sizing: border-box;
-    font-size: 30px;
-
-    p {
-        margin: 5% 0;
-    }
 }
 
-.project-description {
-    font-size: 17px;
+.experience.title {
+    width: auto;
+    flex: 35%;
+}
+
+.project.title p {
+    margin: 5% 0;
+}
+
+.experience.title p {
+    margin: 0.2em 2%;
+}
+
+.description {
     padding: 1%;
-    box-sizing: border-box;
     text-align: left;
+}
+
+.experience.description {
+    flex: 50%;
 }
 
 .disable-select {
