--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -183,6 +183,15 @@ body {
                 cursor: pointer;
                 border: 2px solid var(--main-text-color);
             }
+
+        }
+
+        &:focus {
+            outline: none;
+
+            .icon {
+                border: 2px solid var(--main-text-color);
+            }
         }
     }
 }
@@ -194,6 +203,14 @@ body {
     align-self: flex-end;
     margin-bottom: 50px;
     animation: arrow-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
+
+    a:focus {
+        outline:none;
+
+        .arrow {
+            border-width: 0 3.5px 3.5px 0;
+        }
+    }
 }
 
 .arrow {
@@ -214,19 +231,15 @@ body {
 .portfolio-container {
     width: 100%;
     height: auto;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: auto auto;
-    grid-template-areas: 'menu title' '. content';
-    align-content: center;
     background: var(--alt-background-color);
+    align-items: flex-start !important;
 }
 
 .portfolio-menu {
-    grid-area: menu;
+    flex: 0 0 20%;
     width: 100%;
     height: auto;
-    margin: 5% 5% 5% 0;
+    margin: 3% 0;
     padding: 0%;
     box-sizing: border-box;
     border-right: 2px solid var(--alt-text-color);
@@ -235,7 +248,7 @@ body {
 }
 
 .portfolio {
-    grid-area: content;
+    flex: 0 0 80%;
     width: 100%;
     height: auto;
     text-align: center;
@@ -254,7 +267,6 @@ button.menu a, button.menu a h2, .portfolio-title {
 }
 
 .title-container {
-    grid-area: title;
     width: 100%;
     display: flex;
     flex-flow: row nowrap;
@@ -365,11 +377,17 @@ button.menu {
     padding: 1% 2%;
 }
 
+.experience.content {
+    width: auto;
+    height: auto;
+    flex: 80%;
+}
+
 .experience.image-container {
     width: auto;
     height: 12vh;
     margin: 1% 0;
-    flex: 15%;
+    flex: 20%;
 }
 
 .project.image-container {
@@ -392,8 +410,8 @@ button.menu {
 }
 
 .experience.title {
-    width: auto;
-    flex: 35%;
+    width: 100%;
+    text-align: left;
 }
 
 .project.title p {
@@ -410,7 +428,7 @@ button.menu {
 }
 
 .experience.description {
-    flex: 50%;
+    width: 100%;
 }
 
 .disable-select {
