--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -54,7 +54,9 @@
 
 :root {
     --main-background-color: #003262; /* dark mode: black */
+    --main-background-color-dark: #001631; /* dark mode: black */
     --main-text-color: white; /* dark mode: white */
+    --main-text-color-rgb: 255, 255, 255;
     --main-background-gradient: linear-gradient(30deg, #003262, #004893); /* dark mode: black */
     --alt-background-color: #d7cb84; /* dark mode: black */
     --alt-text-color: #003262; /* dark mode: white */
@@ -232,32 +234,30 @@ body {
     width: 100%;
     height: auto;
     background: var(--alt-background-color);
-    align-items: flex-start !important;
 }
 
 .portfolio-menu {
-    flex: 0 0 20%;
     width: 100%;
     height: auto;
-    margin: 3% 0;
-    padding: 0%;
-    box-sizing: border-box;
-    border-right: 2px solid var(--alt-text-color);
-    position: sticky;
-    top: 10%;
+    margin: 0;
+    padding: 0;
+    /* border-bottom: 1px solid rgba(var(--alt-text-color-rgb), 0.5); */
+    box-shadow: 1px 0 2px var(--alt-text-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--main-background-color-dark);
+    justify-content: center !important;
+    z-index: 5;
 }
 
 .portfolio {
-    flex: 0 0 80%;
-    width: 100%;
+    width: 80%;
     height: auto;
+    margin: 0 10%;
     text-align: center;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
     background: var(--alt-background-color);
+    align-items: flex-start !important;
 }
 
 button.menu a, button.menu a h2, .portfolio-title {
@@ -281,17 +281,17 @@ button.menu a, button.menu a h2, .portfolio-title {
 }
 
 button.menu {
+    flex: 0 0 15%;
     width: 100%;
     height: 100%;
     background: transparent;
     border: 0;
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
 
     &:hover {
         cursor: pointer;
-        background: rgba(var(--alt-text-color-rgb), 0.1); /* alt text color with alpha of 0.1 */
+        background: rgba(var(--main-text-color-rgb), 0.1); /* alt text color with alpha of 0.1 */
     }
 
     &:focus {
@@ -299,7 +299,7 @@ button.menu {
     }
 
     &.selected, &:active {
-        background: rgba(var(--alt-text-color-rgb), 0.2); /* alt text color with alpha of 0.2 */
+        background: rgba(var(--main-text-color-rgb), 0.2); /* alt text color with alpha of 0.2 */
     }
 
     a {
@@ -309,12 +309,12 @@ button.menu {
 
         h2 {
             display: inline-block;
-            text-align: left;
+            text-align: center;
             padding: 3% 10%;
             margin: 0;
-            box-sizing: border-box;
             width: 100%;
             height: 100%;
+            color: var(--main-text-color);
         }
     }
 }
@@ -458,4 +458,18 @@ footer {
         margin: 0;
         padding: 0;
     }
+}
+
+.dark-mode-button {
+    width: auto;
+    height: auto;
+    padding: 1%;
+    background-color: var(--main-background-color-dark);
+    border: 1px solid var(--main-text-color);
+    border-radius: 5px;
+    color: var(--main-text-color);
+    cursor: pointer;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
 }
