--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -55,13 +55,13 @@
 :root {
     --main-background-color: #003262; /* dark mode: black */
     --main-background-color-dark: #001631; /* dark mode: black */
-    --main-text-color: white; /* dark mode: white */
-    --main-text-color-rgb: 255, 255, 255;
+    --main-text-color-rgb: 255, 255, 255; /* dark mode: 255, 255, 255 */
+    --main-text-color: rgb(var(--main-text-color-rgb)); /* dark mode: white */
     --main-background-gradient: linear-gradient(30deg, #003262, #004893); /* dark mode: black */
-    --alt-background-color: #d7cb84; /* dark mode: black */
-    --alt-text-color: #003262; /* dark mode: white */
+    --alt-background-color: #d7cb84; /* dark mode: #202020 */
     --alt-text-color-rgb: 0, 50, 98; /* dark mode: 255, 255, 255 */
-    --box-shadow: 0 5px 15px black; /* dark mode: 0 0 5px white */
+    --alt-text-color: rgb(var(--alt-text-color-rgb)); /* dark mode: white */
+    --box-shadow: 0 5px 15px black; /* dark mode: 0 0 2px white */
     --fly-in-duration: 0.6s;
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
     --width-ratio: 1;
@@ -136,7 +136,6 @@ body {
 .profile-picture-container {
     flex: 4 4 40%;
     height: auto;
-    box-sizing: border-box;
     padding: 4%;
     margin: 0;
 }
@@ -148,7 +147,6 @@ body {
     box-shadow: 0 0 10px black;
     border: 1.5px solid var(--main-text-color);
     margin-left: 20%;
-    box-sizing: border-box;
     animation: picture-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
 }
 
@@ -157,7 +155,6 @@ body {
     height: auto;
     padding: 4%;
     padding-right: 10%;
-    box-sizing: border-box;
     margin: auto;
     font-size: 20px;
     animation: profile-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
@@ -179,7 +176,6 @@ body {
             width: 3.5em;
             border-radius: 50%;
             border: 1px solid var(--main-text-color);
-            box-sizing: border-box;
 
             &:hover {
                 cursor: pointer;
@@ -230,18 +226,11 @@ body {
     }
 }
 
-.portfolio-container {
-    width: 100%;
-    height: auto;
-    background: var(--alt-background-color);
-}
-
 .portfolio-menu {
     width: 100%;
     height: auto;
     margin: 0;
     padding: 0;
-    /* border-bottom: 1px solid rgba(var(--alt-text-color-rgb), 0.5); */
     box-shadow: 1px 0 2px var(--alt-text-color);
     position: fixed;
     top: 0;
@@ -252,9 +241,10 @@ body {
 }
 
 .portfolio {
-    width: 80%;
+    width: 100%;
     height: auto;
-    margin: 0 10%;
+    margin: 0;
+    padding: 0 10%;
     text-align: center;
     background: var(--alt-background-color);
     align-items: flex-start !important;
@@ -268,15 +258,11 @@ button.menu a, button.menu a h2, .portfolio-title {
 
 .title-container {
     width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
 }
 
 .portfolio-title {
-    margin: 6vh 3vw;
+    margin: 8vh 3vw;
     text-align: left;
-    justify-self: flex-start;
     width: 100%;
 }
 
@@ -322,8 +308,11 @@ button.menu {
 .section-container {
     width: 100%;
     height: auto;
-    padding: 0 5% 2% 5%;
-    box-sizing: border-box;
+    padding: 0 4%;
+}
+
+.section-container:last-child {
+    padding-bottom: 2%;
 }
 
 .grid-3 {
@@ -359,7 +348,7 @@ button.menu {
     border-radius: 20px;
     background: var(--main-background-color);
     color: var(--main-text-color);
-    margin: 1%;
+    margin: 1vw;
     box-shadow: var(--box-shadow);
 
     a {
@@ -368,7 +357,7 @@ button.menu {
 }
 
 .project.card {
-    height: 100%;
+    height: calc(100% - 2vw);
     padding: 4%;
 }
 
@@ -452,7 +441,6 @@ footer {
     color: var(--main-text-color);
     text-align: center;
     padding: 1%;
-    box-sizing: border-box;
 
     p {
         margin: 0;
