--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -66,6 +66,10 @@
     --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
     --width-ratio: 1;
     --height-ratio: 1;
+    --width-0: 0;
+    --width-1: 0;
+    --width-2: 0;
+    --width-3: 0;
 }
 
 * {
@@ -236,8 +240,24 @@ body {
     top: 0;
     left: 0;
     background: var(--main-background-color-dark);
-    justify-content: center !important;
     z-index: 5;
+}
+
+.portfolio-menu::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: calc(100% - 3px);
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: var(--main-background-color-dark);
+    z-index: 2;
+}
+
+.menu-buttons {
+    justify-content: center !important;
+    z-index: 3;
 }
 
 .portfolio {
@@ -247,10 +267,22 @@ body {
     padding: 0 10%;
     text-align: center;
     background: var(--alt-background-color);
-    align-items: flex-start !important;
+    /* old, not needed i think: align-items: flex-start !important; */
 }
 
-button.menu a, button.menu a h2, .portfolio-title {
+.progress-container {
+    width: 100%;
+    height: 3px;
+    background-color: var(--main-background-color);
+}
+
+.progress-bar {
+    width: 0%;
+    height: 3px;
+    background-color: var(--main-text-color);
+}
+
+.menu a, .menu a h2, .portfolio-title {
     color: var(--alt-text-color);
     display: inline;
     text-decoration: none;
@@ -266,7 +298,7 @@ button.menu a, button.menu a h2, .portfolio-title {
     width: 100%;
 }
 
-button.menu {
+.menu {
     flex: 0 0 15%;
     width: 100%;
     height: 100%;
@@ -274,6 +306,7 @@ button.menu {
     border: 0;
     padding: 0;
     margin: 0;
+    position: relative;
 
     &:hover {
         cursor: pointer;
@@ -286,6 +319,18 @@ button.menu {
 
     &.selected, &:active {
         background: rgba(var(--main-text-color-rgb), 0.2); /* alt text color with alpha of 0.2 */
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: calc(100% - 3px);
+        left: 0;
+        width: 0;
+        height: 3px;
+        background-color: var(--main-text-color);
+        z-index: 6;
     }
 
     a {
@@ -303,6 +348,22 @@ button.menu {
             color: var(--main-text-color);
         }
     }
+}
+
+#Experience::after {
+    width: var(--width-0);
+}
+
+#Projects::after {
+    width: var(--width-1);
+}
+
+#Coursework::after {
+    width: var(--width-2);
+}
+
+#Resume::after {
+    width: var(--width-3);
 }
 
 .section-container {
