Remove progress bar

--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -350,6 +350,7 @@ body {
     }
 }
 
+/*
 #Experience::after {
     width: var(--width-0);
 }
@@ -365,6 +366,7 @@ body {
 #Resume::after {
     width: var(--width-3);
 }
+*/
 
 .section-container {
     width: 100%;
