--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -307,6 +307,7 @@ body {
     padding: 0;
     margin: 0;
     position: relative;
+    transition: background 0.2s;
 
     &:hover {
         cursor: pointer;
