--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -406,6 +406,10 @@ Not using for now at least
             width: 100%;
             height: 100%;
             color: var(--main-text-color);
+            letter-spacing: 0.15rem;
+            text-transform: uppercase;
+            line-height: 1.8em;
+            font-weight: 200;
         }
     }
 }
