--- a/assets/stylesheets/source/main.scss
+++ b/assets/stylesheets/source/main.scss
@@ -129,6 +129,10 @@ body {
     font-variant: small-caps;
 }
 
+.alt-color {
+    color: var(--alt-text-color);
+}
+
 .profile {
     width: 100%;
     height: 100vh;
@@ -513,6 +517,11 @@ Not using for now at least
     width: auto;
     height: 15vh;
     margin: 5% 0;
+}
+
+.fa-8x {
+    font-size: 8em !important;
+    border: none !important;
 }
 
 .image {
